# GreenWire

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  spack.yaml
docs/: appsetup.md  install.md  optimizations.md
greenwire/greennet/xdp/: xdp_init.c
greenwire/greenperf/processor/cpu/: cpu_init.c
greenwire/greensrc/include/: common.h
greenwire/include/: common.h
greenwire/include/arch/arm/: arm.h
greenwire/include/arch/arm/armv7/: optimizations.h
greenwire/include/arch/arm/armv8/: optimizations.h
greenwire/include/arch/mips/: optimizations.h
greenwire/include/arch/x86/: x86_common.h
greenwire/include/arch/x86/amd/: optimizations.h
greenwire/include/arch/x86/i386/: optimizations.h
greenwire/include/arch/x86/intel/: optimizations.h
greenwire/net/include/: common.h
greenwire/perf/include/: common.h
greenwire/ui/: main.py
scripts/: build_local.sh  setup_conf_dpdk.sh  setup_crosscompiler.sh  setup_install_deps.sh  setup_install_dpdk.sh  setup_run_tests.sh
spack/: repo.yaml
